fix svg gorizontal align

--- a/src/app/contacts/contacts.component.scss
+++ b/src/app/contacts/contacts.component.scss
@@ -42,7 +42,6 @@
 .contact-item-pic {
   margin: 0 5px;
   fill: $hover-color;
-  text-align: center;
 }
 
 .contact-item-content {
